# sam-3d-body

./: .gitattributes  .gitignore  .gitmodules  CONTRIBUTING.md  INSTALL.md  LICENSE  MANIFEST.in  PUBLISHING.md  README.md  claude.md  compare_pkl.py  demo.py  demo_v2.py  flake.nix  install.sh  install_git_deps.sh  pyproject.toml  requirements.txt  sam3d_body_estimator.py  sam3d_body_estimator_hand.py  test.py
SAM3DImage/environments/: default.yml
SAM3DImage/sam3d_image/modality_preprocessor/: preprocessor.py
SAM3DImage/sam3d_image/model/embedder/: embedder_fuser.py  point_remapper.py
SAM3DImage/sam3d_image/pipeline/: inference_pipeline_texture_swap.py  layout_post_optimization_utils.py
SAM3DImage/sam3d_image/pipeline/depth_models/: moge.py  vggt.py
core/metadata/: __init__.py  atlas70.py
core/models/backbones/: __init__.py  vit_hmr2.py
core/models/decoders/: __init__.py  keypoint_prompt_sampler.py  promptable_decoder.py
core/models/heads/: __init__.py  atlas_head.py
core/models/meta_arch/: __init__.py  base_model.py  sam3d_body.py  sam3d_body_triplet.py
core/models/modules/: atlas46.py  atlas_utils.py  proto.py  transformer.py
core/visualization/: pytorch3d_renderer.py  render_multiperson.py
data/: README.md
data/scripts/: create_webdataset.py  download.py
data/scripts/aic/: README.md
data/scripts/coco/: README.md
data/scripts/egoexo4d/: README.md
data/scripts/egohumans/: README.md  _init_paths.py  undistort_images.py
data/scripts/egohumans/config/: default.py
data/scripts/harmony4d/: README.md  undistort_images.py
data/scripts/harmony4d/config/: default.py
data/scripts/mpii/: README.md
examples/: README.md  demo.py
notebook/: demo_human.ipynb  utils.py
notebook/output/dancing/: dancing_mesh_000.ply
notebook/output/mask_based_dancing/: mask_dancing_mesh_000.ply
sam3d-body/: .gitignore  demo.py  sam3d_body_estimator.py
sam3d-body/core/data/: data_module.py  dataset_registry.py  filters_registry.py
sam3d-body/core/data/transforms/: README.md  __init__.py  augmentation.py  bbox_utils.py  common.py  crop_utils.py  flip_utils.py  flying_object.py  formatting.py
sam3d-body/core/data/utils/: atlas46_filters.py  atlas_filters.py  dataset_utils.py  io.py  smpl_filters.py  webdataset.py
sam3d-body/core/metadata/: __init__.py  coco.py  dataset_eval.py  dataset_train.py  h36m.py  smplx.py
sam3d-body/core/models/: README.md
sam3d-body/core/models/backbones/: __init__.py  dinov2.py  dinov3.py  perception_encoder.py  vit_sapiens.py
sam3d-body/core/models/decoders/: __init__.py  fov_decoder.py  prompt_encoder.py  promptable_decoder.py
sam3d-body/core/models/heads/: __init__.py  atlas_head.py  camera_head.py
sam3d-body/core/models/modules/: atlas46.py  (+7 more)
sam3d-body/core/utils/: checkpoint.py  config.py  rich_utils.py
sam3d-body/core/visualization/: README.md  mesh_renderer.py  render_atlas.py  renderer.py  skeleton_renderer.py  utils.py
sam3d_image/: .gitignore  .gitmodules  pyproject.toml  requirements.inference.txt  requirements.txt
sam3d_image/doc/: setup.md
sam3d_image/environments/: default.yml
sam3d_image/sam3d_image/modality_preprocessor/: img_and_mask_transforms.py  img_processing.py  pose_target.py  transforms_3d.py
sam3d_image/sam3d_image/model/: io.py
sam3d_image/sam3d_image/pipeline/: inference_pipeline.py  inference_pipeline_layout_mitl_pointmap.py  inference_pipeline_pointmap.py  inference_utils.py  preprocess_utils.py
sam_3d_body/: __init__.py  build_models.py  build_sam.py  estimator.py  sam_3d_body_estimator.py  sam_3d_body_estimator_tta.py  sam_3d_body_estimator_unified.py
sam_3d_body/data/transforms/: __init__.py  bbox_utils.py  common.py
sam_3d_body/data/utils/: io.py  prepare_batch.py
sam_3d_body/metadata/: __init__.py  joint14.py  mhr70.py  openpose.py
sam_3d_body/models/backbones/: __init__.py  dinov3.py  vit_hmr2.py
sam_3d_body/models/decoders/: __init__.py  keypoint_prompt_sampler.py  prompt_encoder.py  promptable_decoder.py
sam_3d_body/models/heads/: __init__.py  atlas_head.py  camera_head.py  mhr_head.py  mohr_head.py
sam_3d_body/models/meta_arch/: __init__.py  base_lightning_module.py  base_model.py  sam3d_body.py  sam3d_body_triplet.py  sam3d_body_unified.py
sam_3d_body/models/modules/: __init__.py  atlas46.py  atlas_utils.py  camera_embed.py  drop_path.py  geometry_utils.py  layer_scale.py  mhr_utils.py  misc.py  mohr_3po_wrapper.py  proto.py  swiglu_ffn.py  transformer.py
sam_3d_body/models/optim/: fp16_utils.py
sam_3d_body/utils/: __init__.py  checkpoint.py  config.py  dist.py  logging.py  misc.py
sam_3d_body/visualization/: mesh_renderer.py  pytorch3d_renderer.py  render_atlas.py  render_multiperson.py  renderer.py  skeleton_renderer.py  skeleton_visualizer.py  utils.py
tools/: build_detector.py  build_fov_estimator.py  build_sam.py  vis_utils.py
(+31 files in other folders)
