[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sam-3d-body"
version = "1.0.0"
description = "SAM 3D Body: Single Image Human Mesh Recovery - A promptable foundation model for 3D human mesh estimation"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "Meta AI Research", email = ""},
]
keywords = [
    "computer-vision",
    "3d-reconstruction",
    "human-pose-estimation",
    "mesh-recovery",
    "pytorch",
    "deep-learning",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
]

dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "numpy>=1.20.0",
    "opencv-python>=4.5.0",
    "einops>=0.6.0",
    "timm>=0.9.0",
    "rich>=13.0.0",
    "hydra-core>=1.3.0",
    "hydra-submitit-launcher>=1.2.0",
    "hydra-colorlog>=1.2.0",
    "pyrootutils>=1.0.0",
    "yacs>=0.1.8",
    "scikit-image>=0.19.0",
    "pandas>=1.5.0",
    "webdataset>=0.2.0",
    "dill>=0.3.0",
    "chump>=1.6.0",
    "networkx==3.2.1",
    "roma>=1.3.0",
    "joblib>=1.2.0",
    "seaborn>=0.12.0",
    "appdirs>=1.4.0",
    "cython>=0.29.0",
    "jsonlines>=3.0.0",
    "pytest>=7.0.0",
    "xtcocotools>=1.14.0",
    "loguru>=0.7.0",
    "optree>=0.9.0",
    "huggingface-hub>=0.20.0",
    "pytorch-lightning>=2.0.0",
]

[project.optional-dependencies]
vis = [
    "pyrender>=0.1.45",
    "smplx>=0.1.28",
]
detector = [
    # Note: detectron2 requires git installation
    # pip install git+https://github.com/facebookresearch/detectron2.git@a1ce2f9
]
full = [
    "sam-3d-body[vis,detector]",
    # Note: The following require git installation or special setup:
    # - momentum: pip install git+https://github.com/facebookresearch/momentum@77c3994
    # - pytorch3d: pip install git+https://github.com/facebookresearch/pytorch3d.git@75ebeea
    # - MoGe: pip install git+https://github.com/microsoft/MoGe.git
    # - flash-attn==2.7.3 (requires CUDA and specific compiler setup)
    # - xformers (conda install recommended)
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "build>=0.10.0",
    "twine>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/facebookresearch/sam-3d-body"
Repository = "https://github.com/facebookresearch/sam-3d-body"
Documentation = "https://github.com/facebookresearch/sam-3d-body#readme"
"Bug Tracker" = "https://github.com/facebookresearch/sam-3d-body/issues"

[tool.setuptools]
packages = ["sam_3d_body"]

[tool.setuptools.package-data]
sam_3d_body = ["**/*.py"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 100
