[project]
name = "sam-3d-body"
version = "0.1.0"
description = "SAM 3D Body is one part of SAM 3D, a pair of models for object and human mesh reconstruction. If you’re looking for SAM 3D Objects, [click here](https://github.com/facebookresearch/sam-3d-objects)"
readme = "README.md"
requires-python = ">=3.11, <3.12"
dependencies = [
    "appdirs>=1.4.4",
    "appnope>=0.1.4",
    "black>=25.11.0",
    "chump>=1.6.0",
    "cython>=3.2.1",
    "detectron2",
    "dill>=0.4.0",
    "einops>=0.8.1",
    "ffmpeg>=1.4",
    "fvcore>=0.1.5.post20221221",
    "huggingface-hub>=1.1.4",
    "hydra-colorlog>=1.2.0",
    "hydra-core>=1.3.2",
    "hydra-submitit-launcher>=1.2.0",
    "joblib>=1.5.2",
    "jsonlines>=4.0.0",
    "loguru>=0.7.3",
    "moge",
    "networkx==3.2.1",
    "numpy>=2.3.5",
    "opencv-python>=4.11.0.86",
    "optree>=0.18.0",
    "pandas>=2.3.3",
    "pip>=25.3",
    "pycocotools>=2.0.10",
    "pyrender>=0.1.45",
    "pyrootutils>=1.0.4",
    "pytest>=9.0.1",
    "pytorch-lightning>=2.5.6",
    "rich>=14.2.0",
    "roma>=1.5.4",
    "scikit-image>=0.25.2",
    "seaborn>=0.13.2",
    "tensorboard>=2.20.0",
    "timm>=1.0.22",
    "wandb>=0.23.0",
    "webdataset>=1.0.2",
    "xtcocotools>=1.14.3",
    "yacs>=0.1.8",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
moge = { git = "https://github.com/microsoft/MoGe.git" }
detectron2 = { git = "https://github.com/facebookresearch/detectron2.git", rev = "a1ce2f9" }
